--- a/index.html
+++ b/index.html
@@ -1,69 +1,145 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mi página web</title>
+    <title>Mi Portafolio</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f2f2f2;
-        }
+    body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    color: rgb(12, 1, 12);
+    line-height: 1.5;
+    background-image: url(https://images.unsplash.com/photo-1682977456166-9a94ee4a4c2f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80) ;
+    background-size: cover;
+    background-position: center;
+    }
 
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
+    header {
+        color: #059724;
+        padding: 20px;
+        text-align: center;
+    }
+    
+    header img {
+        width: 200;
+        height: 200;
+        border-radius: 50%;
+    }
+    h1 {
+        margin: 0;
+    }
 
-        h1 {
-            margin: 0;
-        }
+    main {
+        padding: 20px;
+    }
 
-        nav {
-            background-color: #555;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
+    .section {
+        margin-bottom: 40px;               
+    }
 
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 10px;
-        }
+    .section h2 {
+        margin-top: 0;
+        color: #325C80;
+        font-size: 24px;
+        color: rgb(14, 54, 165);
+    }
 
-        main {
-            padding: 20px;
-        }
+    .section p {
+        margin-bottom: 10px;
+    }
 
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
+    .name {
+        font-size: 24px;
+        font-weight: bold;
+        color: #17334b;
+    }
+
+    ul {
+        list-style-type: disc;
+        margin-left: 20px;
+    }
+
+    footer {
+        background-color: #325C80;
+        color: #fff;
+        padding: 10px;
+        text-align: center;
+    }
+
+    /* Estilos personalizados para diferentes secciones */
+
+    .section:nth-child(odd) {
+        background-color: #27a6c96c;
+    }
+
+    .section:nth-child(even) {
+        background-color: #27a6c96c;
+    }
+
+    .section:nth-child(3n) {
+        background-color: #27a6c96c;
+    }
+
+    .section:nth-child(4n) {
+        background-color: #27a6c96c;
+    }
+
+    .section:nth-child(5n) {
+        background-color: #27a6c96c;
+    }
+
+    .section:nth-child(6n) {
+        background-color: #27a6c96c;
+    }
     </style>
 </head>
 <body>
     <header>
-        <h1>Mi página web</h1>
+        <img src="https://images.unsplash.com/photo-1675453988015-304184957af2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Logo" width="200">
+        <h1>Mi Portafolio</h1>
     </header>
 
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Acerca de</a>
-        <a href="#">Contacto</a>
-    </nav>
-
     <main>
-        <h2>Bienvenido</h2>
-        <p>¡Hola, esta es mi página web!</p>
-    </main>
+        <div class="section">
+            <h2>Sobre mí</h2>
+            <p>Hola, mi nombre es <span class="name">Tu Nombre</span>. Soy un apasionado de [insertar tus intereses o habilidades] y me encanta [insertar lo que te gusta hacer o lo que te motiva]. Con [insertar cantidad] años de experiencia en [insertar tu campo o industria], he trabajado en [insertar proyectos o empresas destacadas]. Estoy comprometido/a con la excelencia y la creatividad en mi trabajo, y siempre estoy buscando nuevas oportunidades para crecer y aprender.</p>
+        </div>
 
-    <footer>
-        &copy; 2023 - Todos los derechos reservados
-    </footer>
-</body>
-</html>
+        <div class="section">
+            <h2>Experiencia</h2>
+            <p>A lo largo de mi carrera, he tenido la oportunidad de trabajar en proyectos emocionantes y desafiantes. Algunos de los logros destacados de mi trayectoria incluyen:</p>
+            <ul>
+                <li>Logro 1</li>
+                <li>Logro 2</li>
+                <li>Logro 3</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Proyectos</h2>
+            <p>Aquí se muestra una selección de mis proyectos más recientes:</p>
+            <ul>
+                <li>Proyecto 1</li>
+                <li>Proyecto 2</li>
+                <li>Proyecto 3</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Habilidades</h2>
+            <p>Estas son algunas de las habilidades en las que me destaco:</p>
+            <ul>
+                <li>Habilidad 1</li>
+                <li>Habilidad 2</li>
+                <li>Habilidad 3</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Contacto</h2>
+            <p>Si estás interesado/a en mi trabajo o tienes alguna pregunta, no dudes en contactarme:</p>
+            <ul>
+                <li>Email: tu@email</li>
+                <li>Teléfono: tu número de teléfono</li>
+                <li>Redes sociales: [Inserta enlaces a tus perfiles de redes sociales]</li>
+           
